FEAT: Criando funcionalidade de reset de senha e atualizando swagger com novas rotas
